# gpt_inference_engine

./: CMakeLists.txt  README.md  main.cpp  pyproject.toml  setup.sh
include/: bpe.h  model.h  model_quant.h  ops.h  tensor.h
scripts/: absmax.py  convert_weight.py  verify_conversion.py
src/: bpe.cpp  load_gpt2.cpp  load_gpt2_quant.cpp  model.cpp  model_quant.cpp  ops.cpp
